# TrojanRust

./: Cargo.toml
example/tcp_trojan/: client.json
src/: main.rs
src/config/: base.rs  tls.rs
src/protocol/common/: stream.rs
src/protocol/trojan/: mod.rs
src/proxy/quic/: server.rs
src/proxy/tcp/: handler.rs  server.rs
