[package]
name = "trojan-rust"
version = "0.7.2"
authors = ["cty123"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
byteorder = "1.4"
bytes = "1.4"
clap = "4.1"
env_logger = "0.11.7"
futures = { version = "0.3", features = ["thread-pool"] }
itertools = "0.14.0"
log = "0.4"
rustls = { version = "0.23.23" }
rustls-platform-verifier = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-rustls = "0.26.2"
tonic = { version = "0.8", features = [
    "transport",
    "codegen",
    "tls-roots",
    "tls-webpki-roots",
    "tls",
    "prost",
] }
prost = "0.11"
uninit = "0.6.2"
webpki-roots = "0.22"
rustls-pemfile = "2.2.0"
mockall = "0.13.1"
lazy_static = "1.4"
quinn = "0.11.6"
prost-build = "0.13.5"
once_cell = "1.17"
constant_time_eq = "0.4.1"
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }

[build-dependencies]
tonic-build = { version = "0.8" }

[lib]
name = "trojan_rust"
path = "src/lib.rs"

[[bin]]
name = "trojan-rust"
path = "src/main.rs"
